@@ -3807,6 +3807,8 @@ int util_write_configfile(void)
  
   if (menu_limit_menu_open.v)                 ADD_STRING_CONFIG,"--limitopenmenu");
 
+  if (setting_machine_selection_by_name.v)    ADD_STRING_CONFIG,"--setmachinebyname");
+
   if (menu_filesel_hide_dirs.v)         ADD_STRING_CONFIG,"--hide-dirs");
 
   if (menu_desactivado.v)                     ADD_STRING_CONFIG,"--disablemenu");
